# Fireside

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
fireside/: .env.sample  .gitignore  Fireside.Dockerfile  README.md  __init__.py  conftest.py  docker-compose.yaml  fireside.py  fireside_web.py  manage.py  pyproject.toml  pytest.ini
fireside/chat/: models.py  urls.py  views.py
fireside/chat/admin/: __init__.py  room.py
fireside/chat/consumers/: chat.py
fireside/chat/migrations/: 0001_initial.py  0002_room_description.py  0003_alter_room_uid.py  0004_alter_room_uid.py
fireside/chat/models/: __init__.py  message.py  room.py
fireside/core/: asgi.py  urls.py  wsgi.py
fireside/core/admin/: abstract.py
fireside/core/models/: abstract.py
fireside/core/settings/: __init__.py  base.py  development.py  production.py  test.py
fireside/fireside/: api.py  apps.py  asgi.py  urls.py  wsgi.py
fireside/fireside/admin/: __init__.py  abstract.py  event.py  groups.py  model_admin.py  permissions.py  task.py  tasks.py
fireside/fireside/api/: __init__.py  api.py  security.py
fireside/fireside/events/: __init__.py  abstract.py  defs.py  task.py  tasks.py  utils.py
fireside/fireside/migrations/: 0001_initial.py  0002_alter_task_name_alter_taskdefinition_name.py  0002_remove_taskpreset_protocols_taskpreset_args_and_more.py  0002_taskpreset_priority.py  0003_alter_taskpreset_args_alter_taskpreset_kwargs.py  0003_remove_taskpreset_event_taskpreset_protocols.py  0003_rename_task_taskschedule.py  0004_alter_taskpreset_protocols.py  0004_remove_taskpreset_args.py  0004_rename_taskdefinition_task.py  0005_alter_taskpreset_kwargs.py  0005_task_priority_task_timeout.py  0006_event_eventhandler.py  0006_rename_definition_taskschedule_task_and_more.py  0007_alter_taskschedule_activate_on_and_more.py  0007_remove_eventhandler_event_type_eventhandler_event.py  (+15 more)
fireside/fireside_tests/: README.md  apps.py  models.py  tasks.py
fireside/tasks/: admin.py  apps.py  models.py  tasks.py  utils.py
(+378 files in other folders)
