[tool.poetry]
name = "fireside"
version = "0.1.0"
description = ""
authors = ["benjaminhon <benjaminhon86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
hiredis = "^2.0.0"
redis = "^4.3.3"
channels = "^3.0.4"
channels-redis = "^3.4.0"
django-guardian = "^2.4.0"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
