[tool.poetry]
name = "fireside"
version = "0.1.0"
description = ""
authors = ["benjaminhon <benjaminhon86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
hiredis = "^2.0.0"
redis = "^4.3.3"
channels = "^3.0.4"
channels-redis = "^3.4.0"
django-guardian = "^2.4.0"
django-extensions = "^3.1.5"
Markdown = "^3.4.1"
django-filter = "^22.1"
djangorestframework = "^3.13.1"
toolz = "^0.12.0"
pytest-django = "^4.5.2"
cachetools = "^5.2.0"
rq-scheduler = "^0.11.0"
colorlog = "^6.7.0"
requests = "^2.28.1"
django-rq = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
